ready for final look

--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript 1 CA</title>
+    <title>Harry Potter | Characters</title>
     <link href="css/style.css" rel="stylesheet"/>
 </head>
 <body>
     <div class="container">
-        <h1>Harry Potter Characters</h1>
+        <div class="header">
+            <h1>Harry Potter Characters</h1>
+        <div class="main-nav">
+            <nav>
+                <ul>
+                  <li><a href="index.html" class="active">Home</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+                </ul>
+              </nav>
+        </div>  
+        </div>
         <div class="hp-characters">
             <div class="loader"></div>
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/hp-characters.js"></script>
 </body>
 </html>
