--- a/contact.html
+++ b/contact.html
@@ -21,11 +21,11 @@
         </div>  
         </div>
             <form id="contact">
-                <div id="message"></div>
+                <div class="message" id="successMessage">Your Submission was successfull!</div>
                 <div>
                     <label>
                         Name (required)
-                        <input type="text" name="yourName" id="yourName" />
+                        <input type="text" name="yourName" id="yourName" placeholder="your full name.."/>
                     </label>
                     <div class="form-error" id="yourNameError">Please enter your name</div>
                 </div>
@@ -33,7 +33,7 @@
                 <div>
                     <label>
                         Subject (minimum length of 10 characters)
-                        <input type="text" name="subject" id="subject" />
+                        <input type="text" name="subject" id="subject" placeholder="tell us .."/>
                     </label>
                     <div class="form-error" id="subjectError">The subject needs to be a minimum of 10 characters</div>
                 </div>
@@ -41,7 +41,7 @@
                 <div>
                     <label>
                         Email (required)
-                        <input type="email" name="email" id="email" />
+                        <input type="email" name="email" id="email" placeholder="your email.."/>
                     </label>
                     <div class="form-error" id="emailError">Please enter your email adress</div>
                 </div>
@@ -49,7 +49,7 @@
                 <div>
                     <label>
                         Address (minimum length of 25 characters)
-                        <input type="text" name="address" id="address" />
+                        <input type="text" name="address" id="address" placeholder="your address.."/>
                     </label>
                     <div class="form-error" id="addressError">The subject needs to be a minimum of 25 characters</div>
                 </div>
